Refactor project structure: add Docker support, MySQL configuration, and update environment variables; implement development scripts and Prisma integration

--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "docker:setup": "./scripts/setup.sh",
+    "docker:dev": "./scripts/dev.sh",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio"
   },
   "repository": {
     "type": "git",
