--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.11"
   }
 }
