--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # Configuração para desenvolvimento local (sem Docker)
-DATABASE_URL="mysql://jomorais_user:jomorais_password@localhost:3306/gestao_escolar"
+DATABASE_URL="mysql://u738246074_escola:senhaEscola123!@srv1468.hstgr.io:3306/u738246074_escola"
+# Previous local value (kept for reference):
+# DATABASE_URL="mysql://jomorais_user:jomorais_password@localhost:3306/gestao_escolar"
 JWT_SECRET="your_super_secret_jwt_key_here_change_in_production"
 NODE_ENV="development"
 PORT=8000
