docs: Adicionar guia completo de deploy no Render
- Criado DEPLOY.md com instruções detalhadas
- Adicionado schema.postgresql.prisma para alternativa PostgreSQL
- Atualizado render.yaml com configurações otimizadas
- Documentado processo completo de hospedagem

--- a/render.yaml
+++ b/render.yaml
@@ -26,5 +26,5 @@ databases:
   - name: jomorais-db
     databaseName: jomorais_db
     user: jomorais_user
-    region: oregon # mesmo da aplicação
-    plan: free # starter para mais recursos
+    region: oregon # mesmo da aplicação  
+    plan: free # PostgreSQL gratuito
