--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.2",
     "swagger-jsdoc": "^6.2.8",
